--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,24 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  gap: 10px;
+  text-transform: uppercase;
+  padding-top: 20px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 30px;
+}
+.label {
+  text-transform: uppercase;
+  font-size: 16px;
+}
